# ServerStatus

./: CMakeLists.txt  build.sh  install.sh  main.cpp  run.sh  serverstatus.service  status.cpp  status.h
ServerStatus/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkreader.cpp  networkreader.h
